test/constBlockConsuming9.slq

def main(){
	a:=H(0:ğ”¹);
	if a {} else { a:=H(a); } /// error
	return a;
}
